<?xml version="1.0" encoding="utf-8"?>
<layout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="bookStoreViewModle"
            type="com.example.bookmanagerdb.viewModel.BookStoreViewModel" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_bookname"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/text_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/bookName_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/Hint_bookname"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="no" />

        <EditText
            android:id="@+id/bookPrice_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/hint_price"
            android:inputType="numberSigned|textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/bookName_input" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/add"
            app:layout_constraintEnd_toStartOf="@+id/btn_del"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/btn_del"
            android:layout_width="101dp"
            android:layout_height="wrap_content"

            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/delete"
            app:layout_constraintEnd_toStartOf="@+id/btn_modify"
            app:layout_constraintStart_toEndOf="@+id/btn_add"
            app:layout_constraintTop_toTopOf="@+id/btn_add" />

        <Button
            android:id="@+id/btn_query"
            android:layout_width="101dp"
            android:layout_height="wrap_content"

            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/query"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_modify"
            app:layout_constraintTop_toTopOf="@+id/btn_modify" />

        <Button
            android:id="@+id/btn_modify"
            android:layout_width="101dp"
            android:layout_height="wrap_content"

            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/modify"
            app:layout_constraintEnd_toStartOf="@+id/btn_query"
            app:layout_constraintStart_toEndOf="@+id/btn_del"
            app:layout_constraintTop_toTopOf="@+id/btn_del" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recdisp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_del" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    
</layout>
